Add cover, upd licence, setup collasp & change cdn

--- a/source/_posts/跨越长城走向世界.md
+++ b/source/_posts/跨越长城走向世界.md
@@ -7,6 +7,8 @@ date: 2022-11-16
 
 长城学生网络，前身为北京化工大学学生网络中心系统维护部，是一个由技术爱好者组成的致力于前沿技术探索及推广和开源与自由技术应用的社区性组织。
 
+<!-- more -->
+
 ## 我们的历史与未来
 
 曾经，我们是一个社团部门，隶属于各级学生组织的管理单位。但近些年来政策限制的原因，我们不得不将大量时间用在非技术的事务上。这次额外组建长城学生网络，亦是一次大胆的尝试，一个“违背祖宗的决定”。我们终于可以不再局限于学生社团的桎梏，选择以一个纯自发性组织和大家见面。
