Add tags and categories

--- a/source/_posts/周五新生欢迎活动.md
+++ b/source/_posts/周五新生欢迎活动.md
@@ -3,6 +3,13 @@ title: 周五新生欢迎活动
 date: 2022-11-17
 updated: 2022-11-17
 cover: /img/blog/ccsn_xware.jpg
+categories:
+  - 活动
+tags: 
+  - CCSN
+  - X-ware
+  - 新生
+  - 活动
 ---
 
 每周五我们在319有一个活动——X-ware服务，在这个活动中，我们会为全校师生供免费的软硬件维修服务。
