--- a/source/_posts/跨越长城走向世界.md
+++ b/source/_posts/跨越长城走向世界.md
@@ -1,6 +1,13 @@
 ---
 title: 跨越长城，走向世界
 date: 2022-11-16
+updated: 2022-11-16
+categories:
+- About
+tags: 
+  - CCSN
+  - 关于
+  - 介绍
 ---
 
 ## 关于我们
